password login + some fixes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
 	<div id="myModal" class="modal">
 	  <form class="modal-content" style="width:450px; height: 100px">
-		<nobr><input class="textbox" id="username" style="width: 60%; height: 50%" value=""/> <button class="myButton" id="myBtn" style="font-size: medium">Log in</button></nobr>
+		<input class="textbox" id="username" style="width: 60%; height: 50%" value=""/>
+		<input type="password" id="password" style="margin-top: 10px; width: 60%; height: 50%" value=""/>
+		<button class="myButton" id="myBtn" style="font-size: medium">Log in</button>
 	  </form>
 	</div>
     <ul id="messages" class="dropdown"></ul>
