--- a/index.html
+++ b/index.html
@@ -8,16 +8,23 @@
   </head>
   <body>
 	<div id="myModal" class="modal">
-	  <form class="modal-content" style="width:450px; height: 100px">
-		<input class="textbox" id="username" style="width: 60%; height: 50%" value=""/>
-		<input type="password" id="password" style="margin-top: 10px; width: 60%; height: 50%" value=""/>
-		<button class="myButton" id="myBtn" style="font-size: medium">Log in</button>
+	  <form class="modal-content" style="width:250px; height: 100px">
+		<div style="text-align: center;">
+		  <a>Username:</a> <input class="textbox" id="username" style="margin: 5px; width: 60%; height: 40%" value=""/>
+		  <a>Password:</a> <input type="password" id="password" style="margin: 5px; width: 60%; height: 40%" value=""/>
+		</div>
+		<div style="text-align: center; margin-top: 10px">
+			<button class="myButton" id="myBtn" style="font-size: medium; width: 45%">Log in</button>
+			<button class="myButton" id="myBtn" style="font-size: medium; width: 45%">Register</button>
+		</div>
 	  </form>
 	</div>
-    <ul id="messages" class="dropdown"></ul>
-    <form id="sendform" class="form" action="">
-      <input class="textbox" id="m" autocomplete="off" style="width:90%; height: 50px"/><button class= "myButton" style="width:9%">Send</button>
-    </form>
+	<div style="width: 100%; height: 5%; background-color: #eab693; position: absolute; bottom: 0">
+		<ul id="messages" style="display:none"></ul>
+		<form id="sendform" action="" style="width: 33%; height: 80%;">
+			<input id="m" autocomplete="off" style="width:80%; height: 80%; margin: 1%;"/><button class= "myButton" style="width:15%; height: 90%;  margin: 1%;">Send</button>
+		</form>
+	</div>
 	<script type="text/javascript" src="js/clientsidelogic.js"></script>
   </body>
 </html>
