--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Cat Club</title>
 	<script type="text/javascript" src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/doodlerstyle.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
 	<div id="myModal" class="modal">
