--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</div>
 	  </form>
 	</div>
-	<div style="width: 100%; height: 5%; background-color: #eab693; position: absolute; bottom: 0">
+	<div class="chat" style="width: 100%; height: 5%; background-color: #eab693; position: absolute; bottom: 0">
 		<ul id="messages" style="display:none"></ul>
 		<form id="sendform" action="" style="width: 33%; height: 80%;">
 			<input id="m" autocomplete="off" style="width:80%; height: 80%; margin: 1%;"/><button class= "myButton" style="width:15%; height: 90%;  margin: 1%;">Send</button>
