mute button added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			</div>
 		  </form>
 		</div>
+		<img id="muteButton" class="muteButton" src="images/unmute.png"></img>
 		<div class="chat">
 			<ul id="messages" style="display:none"></ul>
 			<form id="sendform" action="" style="width: 33%; height: 80%;">
