register button support

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			  <a>Password:</a> <input type="password" id="password" style="margin: 5px; width: 60%; height: 40%" value=""/>
 			</div>
 			<div style="text-align: center; margin-top: 10px">
-				<button class="myButton" id="myBtn" style="font-size: medium; width: 45%">Log in</button>
-				<button class="myButton" id="myBtn" style="font-size: medium; width: 45%">Register</button>
+				<button class="button" id="login">Log in</button>
+				<button class="button" id="register">Register</button>
 			</div>
 		  </form>
 		</div>
