--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		  <form class="modal-content" style="width:250px; height: 100px">
 			<div style="text-align: center;">
 			  <a>Username:</a> <input class="textbox" id="username" style="margin: 5px; width: 60%; height: 40%" value=""/>
-			  <a>Password:</a> <input type="password" id="password" style="margin: 5px; width: 60%; height: 40%" value=""/>
+			  <a>Password:</a> <input type="password" id="password" autocomplete="current-password" style="margin: 5px; width: 60%; height: 40%" value=""/>
 			</div>
 			<div style="text-align: center; margin-top: 10px">
 				<button class="button" id="login">Log in</button>
