--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Cat Club</title>
-        <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/socket.io-client@2/dist/socket.io.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
