making collision possible

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <div id="myModal" class="modal">
                 <form class="modal-content" style="width:250px; height: 100px">
                     <div style="text-align: center;">
-                        <a>Username:</a> <input class="textbox" id="username" autocomplete="username" style="margin: 5px; width: 60%; height: 40%" value=""/>
-                        <a>Password:</a> <input type="password" id="password" autocomplete="current-password" style="margin: 5px; width: 60%; height: 40%" value=""/>
+                        <label for="username">Username:</label> <input class="textbox" id="username" autocomplete="username" style="margin: 5px; width: 60%; height: 40%" value=""/>
+                        <label for="password">Password:</label> <input type="password" id="password" autocomplete="current-password" style="margin: 5px; width: 60%; height: 40%" value=""/>
                     </div>
                     <div style="text-align: center; margin-top: 10px">
                         <button class="button" id="login">Log in</button>
@@ -20,7 +20,7 @@
                     </div>
                 </form>
             </div>
-            <img id="muteButton" class="muteButton" src="images/unmute.png"></img>
+            <img id="muteButton" class="muteButton" src="images/unmute.png">
             <div id="chatlog" class="chatlog">
                 <ul id="messages"></ul>
             </div>
