--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <input id="m" autocomplete="off" style="width:80%; height: 80%; margin: 1%;"/><button class= "myButton" style="width:15%; height: 90%;  margin: 1%;">Send</button>
                 </form>
                 <button id="toggleChat" class="chatlog-button">Chat Log</button>
+                <button id="toggleEdit" class="toggleEdit-button">Edit</button>
             </div>
         </div>
         <script type="text/javascript" src="js/clientsidelogic.js"></script>
